add comments to Task8, add null-test and null-behaviour, methods renaming